fix overflow on mobile devices

--- a/DragonFruit.Six.Client/wwwroot/styles/news.css
+++ b/DragonFruit.Six.Client/wwwroot/styles/news.css
@@ -7,8 +7,8 @@
 .d6-news-card {
     gap: 2rem;
     display: flex;
-    flex-direction: row;
     align-items: center;
+    flex-direction: column;
 }
 
 .d6-news-image {
